--- a/src/app.css
+++ b/src/app.css
@@ -43,11 +43,13 @@ button {
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
-  transition: border-color 0.25s;
+  /* transition: border-color 0.25s; */
 }
+
 button:hover {
-  border-color: #646cff;
+  border-color: #5f5f5f;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
